tbody.deleteRow(-1) should never throw an exception

As per spec
https://html.spec.whatwg.org/multipage/tables.html#dom-tbody-deleterow
If index is -1, remove the last element in the rows collection from its
parent. Should not throw exception in this case if row is empty.

BUG=592817

Review URL: https://codereview.chromium.org/1771043004

Cr-Commit-Position: refs/heads/master@{#379771}

Former-commit-id: 0c4a630b476aa829cacd0b8fb7d716d5d993692e